tests/ui/slice_lit.gopp
package main
func main() {
    xs := [int]{1, "two", 3} //~ ERROR expected int, found string
    println(xs)
    zs := [nope]{1} //~ ERROR undefined type nope
    println(zs)
}
